deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: is-media-api-lumen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: is-media-api-lumen
  template:
    metadata:
      labels:
        app: is-media-api-lumen
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: is-media-api-lumen
          image: cr.yandex/crp770o7rua4k773m433/skdesign/is/media:__VERSION__
          ports:
            - containerPort: 80
          volumeMounts:
            - name: is
              mountPath: /var/www/html/storage/app/public
              subPath: media
          imagePullPolicy: Always
      volumes:
        - name: is
          persistentVolumeClaim:
            claimName: is
