deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: is-media-api-lumen
spec:
  type: NodePort
  selector:
    app: is-media-api-lumen
  ports:
    - port: 80
      nodePort: 30003
